[coffee][Cuong][Order]Update layout

--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -11,7 +11,7 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
 
-        row ul li:hover {
+        #menu li:hover {
             background-color: #c29867;
             border-radius: 3px;
         }
@@ -74,6 +74,12 @@
                         <a href="/account/admin" class="nav-link px-0 align-middle text-light">
                             <i class="fa-solid fa-users-gear" style="color: #ffffff;"></i> <span
                                 class="ms-1 d-none d-sm-inline">Quản lí tài khoản</span>
+                        </a>
+                    </li>
+                    <li class="nav-item w-100">
+                        <a href="/order/revenue" class="nav-link px-0 align-middle text-light">
+                            <i class="fa-solid fa-chart-simple" style="color: #ffffff;"></i> <span
+                                class="ms-1 d-none d-sm-inline">Doanh thu 3 tháng gần nhất</span>
                         </a>
                     </li>
                 </ul>
