[COFFEE][NHAT][USER]update icon tittle

--- a/coffee_project/src/main/resources/templates/user/change.html
+++ b/coffee_project/src/main/resources/templates/user/change.html
@@ -8,6 +8,7 @@
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
     <style>
         td {
             padding-right: 30px;
@@ -25,7 +26,7 @@
 
         #form-create input,
         #form-create select {
-            width: 350px;
+            width: 88%;
             margin-left: 40px;
         }
         #form-create div{
