--- a/coffee_project/src/main/resources/templates/user/create.html
+++ b/coffee_project/src/main/resources/templates/user/create.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style th:insert="/layout::style"></style>
+    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
     <!--                    //File css Img-->
     <style>
         td {
@@ -42,7 +43,7 @@
 
         #form-create input,
         #form-create select {
-            width: 350px;
+            width: 80%;
             margin-left: 20px;
         }
 
@@ -194,7 +195,7 @@
                                         <tr>
 
                                             <td colspan="2">
-                                                <button style="margin-top:20px; width: 100%" id="submit" type="submit"
+                                                <button style="margin-top:20px; width: 88%" id="submit" type="submit"
                                                         class="btn btn-primary">
                                                     Sửa
                                                 </button>
