--- a/coffee_project/src/main/resources/templates/user/update.html
+++ b/coffee_project/src/main/resources/templates/user/update.html
@@ -5,6 +5,8 @@
     <title>Sửa thông tin</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
     <style th:insert="/layout::style"></style>
     <script src="/js/jquery-3.7.0.min.js"></script>
 
@@ -44,7 +46,7 @@
 
         #form-create input,
         #form-create select {
-            width: 350px;
+            width: 80%;
         }
 
         small {
@@ -202,8 +204,8 @@
 
                                     <tr>
 
-                                        <td colspan="2">
-                                            <button style="margin-top:20px; width: 100%" id="submit" class="btn btn-primary">
+                                        <td colspan="2" align="left">
+                                            <button style="margin-top:20px; width: 88%" id="submit" class="btn btn-primary">
                                                 Sửa
                                             </button>
                                         </td>
