--- a/coffee_project/src/main/resources/templates/customer/create.html
+++ b/coffee_project/src/main/resources/templates/customer/create.html
@@ -1,26 +1,10 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Title</title>-->
-<!--    <style th:insert="/layout::style"></style>-->
-<!--    <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"-->
-<!--          href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">-->
-<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">-->
-
-<!--</head>-->
-<!--<body>-->
-<!--<div th:replace="layout::nav"></div>-->
-<!--<div class="container-fluid">-->
-<!--    <div class="row">-->
-<!--        <div th:replace="layout::content1"></div>-->
-<!--        <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">-->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Đăng ký khách hàng</title>
     <style th:replace="/layout::style"></style>
+    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
