--- a/coffee_project/src/main/resources/templates/customer/list.html
+++ b/coffee_project/src/main/resources/templates/customer/list.html
@@ -26,6 +26,11 @@
                     <nav class="navbar navbar-inverse">
                         <div class="container-fluid">
                             <div class="navbar-form navbar-left">
+                                <a class="col-12 mt-2" style="text-decoration: none" href="/order/">
+                                    <button title="Quay lại"
+                                            class="btn btn-primary">
+                                        <i class="fa-solid fa-circle-arrow-left"></i></button>
+                                </a>
                                 <a th:href="@{/customer/showCreateForm}">
                                     <button title="Thêm mới khách hàng"
                                             class="btn btn-primary">
