[Quan][Account][coffee] chỉnh lại quyền và cấu hình lại lần 2

--- a/coffee_project/src/main/resources/templates/403.html
+++ b/coffee_project/src/main/resources/templates/403.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cảnh báo!!!!</title>
+    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
 </head>
 <body>
  <h1 style="color: red">Cảnh báo !!!!!!!!!!!!</h1>
