--- a/coffee_project/src/main/resources/templates/account/change-pass.html
+++ b/coffee_project/src/main/resources/templates/account/change-pass.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Đổi mật khẩu</title>
     <style th:insert="/layout::style"></style>
+    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link rel="stylesheet"
