--- a/coffee_project/src/main/resources/templates/customer/edit.html
+++ b/coffee_project/src/main/resources/templates/customer/edit.html
@@ -31,8 +31,14 @@
                         <form class="form-group" th:action="@{/customer/update}" th:object="${customerDto}"
                               method="post">
                             <fieldset>
-                                <legend style="text-align: center; margin-top: 2rem"><h1>Chỉnh Sửa Thông Tin Khách
-                                    Hàng</h1></legend>
+                                <legend style="text-align: center; margin-top: 2rem"><h1>Chỉnh Sửa Thông Tin Khách Hàng</h1></legend>
+                                <div>
+                                    <a class="col-12 mt-2" style="text-decoration: none" th:href="@{/customer/list}">
+                                        <button title="Quay lại"
+                                                class="btn btn-primary">
+                                            <i class="fa-solid fa-circle-arrow-left"></i></button>
+                                    </a>
+                                </div>
                                 <div class="table">
                                     <table class="table table-hover">
                                         <tr>
@@ -93,16 +99,12 @@
                                                 <div th:text="${customerDto.getCustomerPoint()}"></div>
                                             </td>
                                         </tr>
-                                        <!--                                        <input class="form-control" hidden="hidden" th:field="*{customerPoint}"-->
-                                        <!--                                               readonly>-->
+                                        <!--  <input class="form-control" hidden="hidden" th:field="*{customerPoint}" readonly>-->
                                         <tr>
                                         <tr>
                                             <td></td>
                                             <td>
                                                 <button type="submit" class="btn btn-primary">Chỉnh sửa</button>
-                                                <a th:href="@{/customer/list}" style="text-decoration: none">
-                                                    <button type="button" class="btn btn-secondary">Thoát</button>
-                                                </a>
                                             </td>
                                         </tr>
                                     </table>
